A bunch of mobile formatting changes. Fixed About page on mobile. Icons are all larger. Added Remix icons to the header nav. Added a gradient background to the main box on homepage.

--- a/src/components/IconTile.module.scss
+++ b/src/components/IconTile.module.scss
@@ -2,25 +2,34 @@
   display: none;
 }
 
+.iconGrid {
+  background: red;
+}
+
 .iconGroup {
   text-align: center;
   margin: 1rem 0;
 }
 
 .iconItem {
-  margin: 0 8px 32px 8px;
+  margin: 0 2rem 2rem 0;
   width: 100px;
 }
 
 .iconThumb {
-  width: 68px;
-  height: 68px;
+  width: 96px;
+  height: 96px;
   padding: 16px;
   margin: 8px auto;
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 5px;
   opacity: 0.8;
   transition: border-color ease-in-out 0.4s, opacity ease-in-out 0.4s;
+
+  img {
+    width: 56px;
+    height: 56px;
+  }
 }
 
 .iconItem:hover .iconThumb {
@@ -33,11 +42,6 @@
   transition: color ease-in-out 0.4s;
 }
 
-.iconThumb img {
-  width: 36px;
-  height: 36px;
-}
-
 .iconTitle {
   font-size: 0.8rem;
   color: #ccc;
@@ -46,4 +50,19 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
+}
+
+@media (min-width: 48rem) {
+
+  .iconThumb {
+    width: 84px;
+    height: 84px;
+
+    img {
+      width: 48px;
+      height: 48px;
+    }
+
+  }
+
 }
