--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,8 +1,25 @@
 .box {
-  background: #e9fdfa;
-  padding: 4rem;
-  border-radius: 1rem;
+  background: #7a76de url(/gradient.jpg) no-repeat;
+  background-size: cover;
+  padding: 1rem 1rem 3rem 1rem;
   text-align: center;
+  margin: 0 -1rem;
+
+  h1 {
+    font-size: 2rem;
+    opacity: 1;
+    color: #fff;
+  }
+
+  h3 {
+    font-size: 1rem;
+    mix-blend-mode: multiply;
+    opacity: 0.5;
+  }
+
+  span {
+    display: inline;
+  }
 }
 
 .iconGrid {
@@ -10,6 +27,7 @@
   grid-template-columns: repeat(auto-fit, 4rem);
   justify-content: left;
   grid-gap: 3rem;
+  padding-right: 1rem;
 }
 
 .filterBox {
@@ -19,7 +37,7 @@
 }
 
 .filterBoxInput {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   font-size: 1rem;
   padding: 1rem 1rem 1rem 50px;
@@ -34,4 +52,31 @@
     border-color:  var(--link-color);
     outline: none;
   }
+}
+
+@media (min-width: 48rem) {
+
+  .box {
+    padding: 4rem 4rem 5rem 4rem;
+    border-radius: 0.5rem;
+    margin: 0;
+
+    h1 {
+      font-size: 2.4rem;
+    }
+
+    h3 {
+      font-size: 1.3rem;
+      margin-top: -0.5rem;
+    }
+
+    span {
+      display: block;
+    }
+  }
+
+  .filterBoxInput {
+    width: 80%;
+  }
+
 }
